Fix exporting ORA files

While gathering the x + y offsets, and bounds for saved layers in ORA, now use the
layer->exactBounds() method instead of the plain layer->x() and layer->y().
This seems to correctly capture transformations outside of the original layer bounds
when using transform tools.

BUG:423088