plugins/impex/ora/kis_open_raster_stack_save_visitor.cpp
@@ -60,8 +60,8 @@ void KisOpenRasterStackSaveVisitor::saveLayerInfo(QDomElement& elt, KisLayer* la
     elt.setAttribute("name", layer->name());
     elt.setAttribute("opacity", QString().setNum(layer->opacity() / 255.0));
     elt.setAttribute("visibility", layer->visible() ? "visible" : "hidden");
-    elt.setAttribute("x", QString().setNum(layer->x()));
-    elt.setAttribute("y", QString().setNum(layer->y()));
+    elt.setAttribute("x", QString().setNum(layer->exactBounds().x()));
+    elt.setAttribute("y", QString().setNum(layer->exactBounds().y()));
     if (layer->userLocked()) {
         elt.setAttribute("edit-locked", "true");
     }
@@ -168,9 +168,9 @@ bool KisOpenRasterStackSaveVisitor::visit(KisExternalLayer * layer)
 bool KisOpenRasterStackSaveVisitor::saveLayer(KisLayer *layer)
 {
 
-    // here we adjust the bounds to encompass the entire area of the layer with color data by adding the current offsets
-    QRect adjustedBounds = layer->image()->bounds();
-    adjustedBounds.adjust(layer->x(), layer->y(), layer->x(), layer->y());
+    // here we adjust the bounds to encompass the entire area of the layer, including transforms
+    QRect adjustedBounds = layer->exactBounds();
+
     QString filename = d->saveContext->saveDeviceData(layer->projection(), layer->metaData(), adjustedBounds, layer->image()->xRes(), layer->image()->yRes());
 
     QDomElement elt = d->layerStack.createElement("layer");
